change field property

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,10 @@ Version 0.0.1
     Piotr Slatala
     Marek Kuzora
     Anna Ferster
+
+Version 0.0.2
+-------------
+
+    Jakub Rojek
+    Paweł Radzikowski
+    Mariano Arenas, Calderon
