--- a/docs/source/_static/todo.txt
+++ b/docs/source/_static/todo.txt
@@ -6,3 +6,6 @@ TODO
 * or optimize usage of tk
 * probably generation of examples won't work in Windows (/ are hardcoded)
 * depend on cairosvg (remove it from src)
+* unit tests
+* image size and resolution
+* setting different style for chosen elements (e.g. color, background)
