inverted terminal padding fixed

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,9 @@ Version 0.0.2
     Jakub Rojek
     Paweł Radzikowski
     Mariano Arenas, Calderon
+
+Version 0.0.3
+-------------
+
+    Jakub Kędzierski
+    Mateusz Kurek
